--- a/src/popup.css
+++ b/src/popup.css
@@ -20,6 +20,9 @@ svg {
 	height: 450px;
 	padding: 0;
 	font-family: "Circular Std Book";
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .topbar {
@@ -40,10 +43,21 @@ svg {
 .buttons {
 	margin-right: 15px;
 	display: flex;
-	width: 47px;
+	width: 60px;
 	justify-content: space-between;
 }
 
 .icon-svg {
+	padding: 7px;
 	cursor: pointer;
+	border-radius: 90px;
+}
+
+.icon-svg:hover {
+	background-color: #7769f6;
+}
+
+.input {
+	width: 93%;
+	margin-top: 12px;
 }
